chromeos: Stringify status codes in login messages.

In an attempt to make login failures easier to debug, update
several messages describing progress and errors to include
string descriptions of numeric codes:

  Policy validation failed: 2
  Session manager operation failed: 5
  Failed to retrieve cros policies. Reason: 5
  Resolved state to: 13

Bug: 888520
Change-Id: I8c331c6af7f68dd2e0aa7cdfc98336f4af27f9c2
Reviewed-on: https://chromium-review.googlesource.com/1249730
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Sergey Poromov <poromov@chromium.org>
Commit-Queue: Dan Erat <derat@chromium.org>
Cr-Commit-Position: refs/heads/master@{#595160}
Former-commit-id: a4285863d8ddb8e12eaad92e579267ea81910250